# getweather

./: CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: getweather.rst  modules.rst
getweather/: getweather.py
tests/: test_getweather.py
