[tool.poetry]
name = "getweather"
version = "0.1.0"
description = "An API client python package for OpenWeatherMap."
authors = ["jiajia <71299133+SijiaChen0110@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
