[tool.poetry]
name = "getweather"
version = "0.1.0"
description = "An API client python package for OpenWeatherMap."
authors = ["jiajia <71299133+SijiaChen0110@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.5"
pytest = "^6.2.0"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
